--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,63 +5,38 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>alreadyread</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.blue.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.blue.min.css">
 </head>
 
-<body>
+<body class="container">
     <header>
-        <nav>
+        <nav class="grid">
             <ul>
                 <li>
                     <hgroup>
-                    <h1>ALREADYREAD</h1>
-                    <h2 id="header-page-name">Inbox</h2>
+                        <h1>ALREADYREAD</h1>
+                        <h2 id="header-page-name">Inbox</h2>
                     </hgroup>
                 </li>
             </ul>
             <ul>
                 <li><a href="javascript: void();" data-hx-get="/inbox" data-hx-push-url="true"
-                        data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                            viewBox="0 0 24 24" width="1em" fill="currentColor"
-                            style="margin-top: -3px; margin-right: 3px">
-                            <path d="M0 0h24v24H0V0z" fill="none"></path>
-                            <path
-                                d="M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z">
-                            </path>
-                        </svg><span>Inbox</span></a></li>
+                        data-hx-target="#container">Inbox</a></li>
                 <li><a href="javascript: void();" data-hx-get="/duplicated" data-hx-push-url="true"
-                        data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                            viewBox="0 0 24 24" width="1em" fill="currentColor"
-                            style="margin-top: -3px; margin-right: 3px">
-                            <path d="M0 0h24v24H0z" fill="none"></path>
-                            <path
-                                d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z">
-                            </path>
-                        </svg><span>Duplicated</span></a></li>
+                        data-hx-target="#container">Duplicated</a></li>
                 <li><a href="javascript: void();" data-hx-get="/dead" data-hx-push-url="true"
-                        data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                            viewBox="0 0 24 24" width="1em" fill="currentColor"
-                            style="margin-top: -3px; margin-right: 3px">
-                            <path d="M0 0h24v24H0z" fill="none"></path>
-                            <path
-                                d="M17.73 12.02l3.98-3.98c.39-.39.39-1.02 0-1.41l-4.34-4.34c-.39-.39-1.02-.39-1.41 0l-3.98 3.98L8 2.29C7.8 2.1 7.55 2 7.29 2c-.25 0-.51.1-.7.29L2.25 6.63c-.39.39-.39 1.02 0 1.41l3.98 3.98L2.25 16c-.39.39-.39 1.02 0 1.41l4.34 4.34c.39.39 1.02.39 1.41 0l3.98-3.98 3.98 3.98c.2.2.45.29.71.29.26 0 .51-.1.71-.29l4.34-4.34c.39-.39.39-1.02 0-1.41l-3.99-3.98zM12 9c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm-4.71 1.96L3.66 7.34l3.63-3.63 3.62 3.62-3.62 3.63zM10 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2 2c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm2-4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zm2.66 9.34l-3.63-3.62 3.63-3.63 3.62 3.62-3.62 3.63z">
-                            </path>
-                        </svg><span>Dead</span></a></li>
+                        data-hx-target="#container">Dead</a></li>
                 <li><a href="javascript: void();" data-hx-get="/all" data-hx-push-url="true"
-                        data-hx-target="#container"><svg xmlns="http://www.w3.org/2000/svg" height="1em"
-                            viewBox="0 0 24 24" width="1em" fill="currentColor"
-                            style="margin-top: -3px; margin-right: 3px">
-                            <path d="M0 0h24v24H0V0z" fill="none"></path>
-                            <path
-                                d="M10 10.02h5V21h-5zM17 21h3c1.1 0 2-.9 2-2v-9h-5v11zm3-18H5c-1.1 0-2 .9-2 2v3h19V5c0-1.1-.9-2-2-2zM3 19c0 1.1.9 2 2 2h3V10H3v9z">
-                            </path>
-                        </svg><span>All</span></a></li>
+                        data-hx-target="#container">All</a></li>
+                <li><a data-hx-get="/post" data-hx-push-url="true"
+                        data-hx-target="#container">Add Link</a></li>
+            </ul>
+            <ul>
                 <li>
                     <input type="search" name="term" id="search" placeholder="Search" data-hx-get="/search"
                         data-hx-target="#container" data-hx-push-url="true" data-hx-trigger="keyup changed delay:500ms">
                 </li>
-                <li><button data-hx-get="/post" data-hx-push-url="true"
-                        data-hx-target="#container"><span>+</span></button></li>
+
             </ul>
         </nav>
     </header>
